package simulation;

public abstract class Fitness {
}
