package simulation.pathfinding;

public class TerrainFitness {
}
